--- a/WebApplication1/Views/People/Details.cshtml
+++ b/WebApplication1/Views/People/Details.cshtml
@@ -26,6 +26,14 @@
             @Html.DisplayFor(model => model.Birthday)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Tags)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Tags)
+        </dd>
+
     </dl>
 </div>
 <p>
