--- a/WebApplication1/Views/ToWatchMovieLists/Delete.cshtml
+++ b/WebApplication1/Views/ToWatchMovieLists/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model MovieList.Models.Person
+﻿@model MovieList.Models.ToWatchMovieList
 
 @{
     ViewBag.Title = "Delete";
@@ -8,31 +8,23 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Person</h4>
+    <h4>ToWatchMovieList</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.MoviesTags)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.MoviesTags)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Birthday)
+            @Html.DisplayNameFor(model => model.MovieIds)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Birthday)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Tags)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Tags)
+            @Html.DisplayFor(model => model.MovieIds)
         </dd>
 
     </dl>
